# topics_cv_service_example

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
src/: config.py  main.py  predictor.py
tests/: test_api.py
